grammar/frendli-grammar.txt

-------------------
GRAMMAR TERMINOLOGY
-------------------

terminal                a literal to be matched and consumed
nonterminal             a call to the function rule


----------------
GRAMMAR NOTATION
----------------

<rule name>:<rule>      rule structure
<quoted string>         exact terminal
<uppercase word>        varying terminal
<lowercase word>        nonterminal

:                       start of rule (definer)
;                       end of rule (terminator)
*                       match zero or more of its left
+                       match one or more of its left
?                       match zero or one of its left (optional)
|                       match its left or right
(                       start of group
)                       end of group
"                       start or end (encloses) of literal
<                       start of comment
>                       end of comment
\                       escape the meaning of its right character
...                     any value from its left to its right


----------
START RULE
----------

file:
	statement* END_OF_FILE ;


---------------
STATEMENT RULES
---------------

statement:
	classDecl
	| classFieldDecl
	| functionDecl
	| variableDecl
	| changeStmt
	| expressionStmt
	| ifStmt
	| repeatTimesStmt
	| repeatWhileStmt
	| returnStmt
	| returnWithStmt ;

classDecl:
	"describe" IDENTIFIER ( "inherit" IDENTIFIER )? classBlock ;

classFieldDecl:
	"has" IDENTIFIER ( "=" expression )? NEWLINE ;

functionDecl:
	"define" IDENTIFIER "(" parameters? ")" block ;

variableDecl:
	"create" IDENTIFIER "=" expression NEWLINE ;

changeStmt:
	"change" ( call "." )? IDENTIFIER "=" expression NEWLINE ;

expressionStmt:
	expression NEWLINE ;

ifStmt:
	"if" expression block ( "otherwise" block )? ;

repeatTimesStmt:
	"repeat" expression "times" block ;

repeatWhileStmt:
	"repeat" "while" expression block ;

returnStmt:
	"return" NEWLINE ;

returnWithStmt:
	"return" "with" expression NEWLINE ;

block:
	NEWLINE INDENT statement+ DEDENT ;

classBlock:
	NEWLINE INDENT classFieldDecl* functionDecl+ DEDENT ;


------------
HELPER RULES
------------

parameters:
	"accept" IDENTIFIER ( "," IDENTIFIER )* ;

arguments:
	"send" expression ( "," expression )* ;


----------------
EXPRESSION RULES
----------------

expression:
	logicOr ;

logicOr:
	logicAnd ( "or" logicAnd )* ;

logicAnd:
	comparison ( "and" comparison )* ;

comparison:
	term ( ( "<" | "<=" | ">" | ">=" | "equals" | "unequals" ) term )* ;

term:
	factor ( ( "+" | "-" ) factor )* ;

factor:
	unary ( ( "*" | "/" ) unary )* ;

unary:
	( "not" | "-" ) unary | call ;

call:
	primary ( "(" arguments? ")" | "." IDENTIFIER )* ;

primary:
	IDENTIFIER
	| NUMBER
	| TEXT
	| "true"
	| "false"
	| "empty"
	| "me"
	| "parent" "." IDENTIFIER
	| "(" expression ")" ;


-------------
LEXICAL RULES
-------------

IDENTIFIER:
	ALPHA ( ALPHA | DIGIT )* ;

NUMBER:
	DIGIT+ ( "." DIGIT+ )? ;

TEXT:
	"\"" <any ASCII character except "\"" or NEWLINE>* "\"" ;

ALPHA:
	"a" ... "z"
	| "A" ... "Z"
	| "_" ;

DIGIT:
	"0" ... "9" ;

NEWLINE:
    "\\n"
    | "\\r\\n"
    | "\\r" ;

INDENT:
    ( " " | "\\t" )+ ;

DEDENT:
    <a decrease in INDENT> ;

EOF:
    <end of file> ;
